[package]
name = "file_transfer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.117"
ratatui = "0.26.2"
crossterm = "0.27.0"
hostname = "0.4.0"
network-interface = "2.0.0"
